--- a/notebook/Zero-shot-classification.ipynb
+++ b/notebook/Zero-shot-classification.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "3c5930ec-240a-4d72-8b24-a67e55b1bb42",
    "metadata": {
     "scrolled": true
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "c85f819a-cd24-4d91-ad22-10cc07797ff9",
    "metadata": {
     "scrolled": true
@@ -80,7 +80,7 @@
        "<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=640x427>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "3dbaab4f-cece-4da4-8df2-fe0a5d87b112",
    "metadata": {
     "tags": []
@@ -122,7 +122,7 @@
        " {'score': 7.409310637740418e-05, 'label': 'bear'}]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,6 +192,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "8e6a9315-3e94-46a6-a99f-fea3529f05c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\p_san\\\\OneDrive\\\\Escritorio\\\\zero_shot_image\\\\notebook'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd() # para saber en qué directorio nos encontramos"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "4ab58fa5-3a8e-4f80-ad6a-1bf37e2e2b8e",
    "metadata": {
@@ -221,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "1cca26cf-0088-4d0c-aee3-7fe610e05cfa",
    "metadata": {
     "tags": []
@@ -243,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "ab77f946-261d-4cc6-8f9d-61810e13176d",
    "metadata": {
     "tags": []
@@ -271,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "870dbf82-128d-4bcc-9bdd-b962a0e30bb5",
    "metadata": {
     "tags": []
@@ -291,7 +312,7 @@
        " {'score': 0.0002144181344192475, 'label': 'pájaro'}]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "01d9700e-5484-4aab-adc1-9231293fceec",
    "metadata": {
     "tags": []
